# imac_fan_control_osnix

./: .flake.nix.swp  .gitignore  CMakeLists.txt  README.md  flake.nix  imac-fan-control.nix
modules/: imac-fan-control.nix
src/: main.cpp  sensors.cpp  sensors.hpp
